wmidump: add wmixtract.py
Signed-off-by: Corentin Chary <corentin.chary@gmail.com>

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Build
 
-  gcc wmidump.c -std=gnu99 -o wmidump
+  make
 
 # Usage
 
@@ -50,3 +50,14 @@ ABBC0F72-8EA1-11D1-00A0-C90629100000:
         reserved: 4F
         instance_count: 1
         flags: 0
+
+# wmixtract.py
+
+wmixtract.py is a small python script to extract _WDG and WQXX buffers.
+Resulting _WDG files can be parsed with wmidump directly.
+WQXX buffers contain compiled MOF (Managed Object Format) and can be
+decompiled using the wmimofck.exe program available in Windows Driver Kit (WDK).
+
+references:
+- "Using Wmimofck.exe": http://msdn.microsoft.com/en-us/library/windows/hardware/ff565588(v=vs.85).aspx
+- "Windows Instrumentation: WMI and ACPI": http://msdn.microsoft.com/en-us/windows/hardware/gg463463
